# job_portal

./: README.md  app.py  debug_tools.py  models.py  pyproject.toml  requirements.txt
routes/: __init__.py  admin_routes.py  candidate_routes.py  main_routes.py  recommendation_engine.py  recruiter_routes.py  sentiment.py
static/css/: dashboard.css  style.css
static/js/: dashboard.js  main.js
templates/: base.html  dashboard_base.html  index.html  login.html  register.html
templates/candidate/: applications.html  dashboard.html  edit_profile.html  jobs.html  profile.html  recommendations.html  register.html  review.html
templates/recruiter/: applications.html  create_job.html  dashboard.html  edit_profile.html  jobs.html  profile.html  register.html  reviews.html
